try jekyll on homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>The Mission Pinball Framework</title>
+    <title>The Mission Pinball Framework | Open Source Pinball Software | {{ page.title }}</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href=
-    "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel=
+    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel=
     "stylesheet">
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
     </script>
     <script src=
-    "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
     </script>
     <script src="https://use.fontawesome.com/0fb2a42c3c.js">
     </script>
@@ -131,7 +131,7 @@
             </div>
         </div>
     </nav><!-- Begin Page Content-->
-    <div class="container"></div><!-- End Page Content-->
+    {{ content }}
     <br>
     <br>
     <footer class="container-fluid text-center">
