fix layout in sub folders

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,47 +25,47 @@
   ga('send', 'pageview');
 
     </script>
-    <link href="css/mpf.css" rel="stylesheet" type="text/css">
+    <link href="/css/mpf.css" rel="stylesheet" type="text/css">
     <link href=
     "https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Oswald:300,400,700"
     rel="stylesheet">
-    <link href="images/icons/apple-touch-icon-57x57.png" rel=
+    <link href="/images/icons/apple-touch-icon-57x57.png" rel=
     "apple-touch-icon-precomposed" sizes="57x57">
-    <link href="images/icons/apple-touch-icon-114x114.png" rel=
+    <link href="/images/icons/apple-touch-icon-114x114.png" rel=
     "apple-touch-icon-precomposed" sizes="114x114">
-    <link href="images/icons/apple-touch-icon-72x72.png" rel=
+    <link href="/images/icons/apple-touch-icon-72x72.png" rel=
     "apple-touch-icon-precomposed" sizes="72x72">
-    <link href="images/icons/apple-touch-icon-144x144.png" rel=
+    <link href="/images/icons/apple-touch-icon-144x144.png" rel=
     "apple-touch-icon-precomposed" sizes="144x144">
-    <link href="images/icons/apple-touch-icon-60x60.png" rel=
+    <link href="/images/icons/apple-touch-icon-60x60.png" rel=
     "apple-touch-icon-precomposed" sizes="60x60">
-    <link href="images/icons/apple-touch-icon-120x120.png" rel=
+    <link href="/images/icons/apple-touch-icon-120x120.png" rel=
     "apple-touch-icon-precomposed" sizes="120x120">
-    <link href="images/icons/apple-touch-icon-76x76.png" rel=
+    <link href="/images/icons/apple-touch-icon-76x76.png" rel=
     "apple-touch-icon-precomposed" sizes="76x76">
-    <link href="images/icons/apple-touch-icon-152x152.png" rel=
+    <link href="/images/icons/apple-touch-icon-152x152.png" rel=
     "apple-touch-icon-precomposed" sizes="152x152">
-    <link href="images/icons/favicon-196x196.png" rel="icon" sizes="196x196"
+    <link href="/images/icons/favicon-196x196.png" rel="icon" sizes="196x196"
     type="image/png">
-    <link href="images/icons/favicon-96x96.png" rel="icon" sizes="96x96" type=
+    <link href="/images/icons/favicon-96x96.png" rel="icon" sizes="96x96" type=
     "image/png">
-    <link href="images/icons/favicon-32x32.png" rel="icon" sizes="32x32" type=
+    <link href="/images/icons/favicon-32x32.png" rel="icon" sizes="32x32" type=
     "image/png">
-    <link href="images/icons/favicon-16x16.png" rel="icon" sizes="16x16" type=
+    <link href="/images/icons/favicon-16x16.png" rel="icon" sizes="16x16" type=
     "image/png">
-    <link href="images/icons/favicon-128.png" rel="icon" sizes="128x128" type=
+    <link href="/images/icons/favicon-128.png" rel="icon" sizes="128x128" type=
     "image/png">
     <meta content="The Mission Pinball Framework" name="application-name">
     <meta content="#FFFFFF" name="msapplication-TileColor">
-    <meta content="images/icons/mstile-144x144.png" name=
+    <meta content="/images/icons/mstile-144x144.png" name=
     "msapplication-TileImage">
-    <meta content="images/icons/mstile-70x70.png" name=
+    <meta content="/images/icons/mstile-70x70.png" name=
     "msapplication-square70x70logo">
-    <meta content="images/icons/mstile-150x150.png" name=
+    <meta content="/images/icons/mstile-150x150.png" name=
     "msapplication-square150x150logo">
-    <meta content="images/icons/mstile-310x150.png" name=
+    <meta content="/images/icons/mstile-310x150.png" name=
     "msapplication-wide310x150logo">
-    <meta content="images/icons/mstile-310x310.png" name=
+    <meta content="/images/icons/mstile-310x310.png" name=
     "msapplication-square310x310logo">
 </head>
 <body>
@@ -83,7 +83,7 @@
                 data-toggle="collapse" type="button"><span class=
                 "icon-bar"></span> <span class="icon-bar"></span> <span class=
                 "icon-bar"></span></button> <a class="navbar-brand" href=
-                "/"><img src="images/mpf-flag-tiny.png"></a>
+                "/"><img src="/images/mpf-flag-tiny.png"></a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
