--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,6 +103,9 @@
                         <a href="/events.html">Live Events</a>
                     </li>
                     <li>
+                        <a href="/blog.html">Blog</a>
+                    </li>
+                    <li>
                         <a href="/about.html">About</a>
                     </li>
                 </ul>
