--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <title>The Mission Pinball Framework | Open Source Pinball Software | {{ page.title }}</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href='{{ site.url }}/feed.xml' rel='alternate' type='application/atom+xml'>
     <link href=
     "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel=
     "stylesheet">
@@ -129,6 +130,11 @@
                         <a href=
                         "https://www.flickr.com/groups/missionpinball"><span class=
                         "fa fa-flickr fa-lg"></span></a>
+                    </li>
+                    <li>
+                        <a href=
+                        "{{ site.url }}/feed.xml"><span class=
+                        "fa fa-rss"></span></a>
                     </li>
                 </ul>
             </div>
