update events page

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -7,6 +7,6 @@ layout: default
 
 {{ content }}
 
-<a href="{{ page.event_url }}" rel="nofollow">Event Homepage</a>
+<a href="{{ page.event_link }}" rel="nofollow">Event Homepage</a>
 
 </div>
