--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,6 +107,9 @@
                         <a href="/blog.html">Blog</a>
                     </li>
                     <li>
+                        <a href="/projects.html">Projects</a>
+                    </li>
+                    <li>
                         <a href="/about.html">About</a>
                     </li>
                 </ul>
