link hardware.missionpinball.org

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,6 +104,9 @@
                         <a href="/events.html">Live Events</a>
                     </li>
                     <li>
+                        <a href="https://hardware.missionpinball.org">Hardware</a>
+                    </li>
+                    <li>
                         <a href="/blog.html">Blog</a>
                     </li>
                     <li>
