blog post about streaming and videos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -124,7 +124,7 @@
                     </li>
                     <li>
                         <a href=
-                        "https://www.youtube.com/missionpinball"><span aria-hidden="true"
+                        "https://www.youtube.com/channel/UCPXS1guuUIyC49ysa-nRuzg"><span aria-hidden="true"
                         class="fa fa-youtube fa-lg"></span></a>
                     </li>
                     <li>
@@ -136,6 +136,11 @@
                         <a href=
                         "https://www.flickr.com/groups/missionpinball"><span class=
                         "fa fa-flickr fa-lg"></span></a>
+                    </li>
+                    <li>
+                        <a href=
+                        "https://www.twitch.tv/jabdoa/"><span class=
+                        "fa fa-twitch fa-lg"></span></a>
                     </li>
                     <li>
                         <a href=
